--- a/TicTacToe.html
+++ b/TicTacToe.html
@@ -51,8 +51,8 @@
     </div>
 <script>
     var count = 0;
-    var pl1 =1 //prompt("Enter name for first player");
-    var pl2 = 2//prompt("Enter name for second player");
+    var pl1 = prompt("Enter name for first player");
+    var pl2 = prompt("Enter name for second player");
  var mainTable = (function(){
      var td = $('.cell');
      function whoseTurn(){
